Improve documentation some more and other fixes
- Improve swagger documentation
- Add authentication to all routes
- Make response format more consistent
- Add feature to get transactions for sub account
- Fix TB startdate for PandL issue
- Expand user table columns
