# lib/handlers/getBalance.js
@@ -1,5 +1,5 @@
 /**
- * Return an account balance
+ * Get account balance
  *
  * GET: /books/{bookId}/balance
  * 
@@ -26,7 +26,11 @@ exports.handler = function getBalance(req, res, next) {
         const inQuote = req.query.inQuoteCurrency !== false;
         return book.getBalance({ account, perPage, page }, inQuote);
     }).then(balance => {
-        res.json(balance);
+        res.json({
+            success: true,
+            message: `Account balance for ${req.query.account} in book ${id}`,
+            data: balance
+        })
     }).catch(err => {
         return next(err);
     });
