# lib/handlers/getSubAcctTransactions.js
@@ -1,11 +1,11 @@
 /**
- * Fetch sub account balance
+ * Fetch sub account transactions
  *
- * GET: /books/{bookId}/subacctbalance
+ * GET: /books/{bookId}/subaccttransactions
  * 
  * query:
- *   account {string} The account name to get the balance for.
- *   accountCode {string} The account code to get the balance for.
+ *   account {string} The account name to get the transactions for.
+ *   accountCode {string} The account code to get the transactions for.
  *   userId {string} The id of user who owns the subaccount.
  *   companyId {string} The id of company who owns the subaccount.
  *   inQuoteCurrency {boolean} If true (default), converts all values to the quote currency first.
@@ -19,7 +19,7 @@ const checkSubAccountQuery = require('../helpers/validateSubAccountQuery');
 
 exports.middleware = [checkAccountInQuery, checkSubAccountQuery];
 
-exports.handler = function getSubAcctBalance(req, res, next) {
+exports.handler = function getSubAcctTransactions(req, res, next) {
     let id = parseInt(req.params.bookId);
     Book.findById(id).then(book => {
         if (!book) {
@@ -32,23 +32,22 @@ exports.handler = function getSubAcctBalance(req, res, next) {
         if (req.query.userId) {
             const { account, perPage, page, userId } = req.query;
             const inQuote = req.query.inQuoteCurrency !== false;
-            return book.getBalance({ account, perPage, page, userId }, inQuote);
+            return book.allTransactions({ account, perPage, page, userId }, inQuote);
         } else if (req.query.companyId) {
             const { account, perPage, page, companyId } = req.query;
             const inQuote = req.query.inQuoteCurrency !== false;
-            return book.getBalance({ account, perPage, page, companyId }, inQuote);
+            return book.allTransactions({ account, perPage, page, companyId }, inQuote);
         } else {
             throw new AleError(`userId or companyId for subaccount must be specified`, codes.MissingInput);
         }
 
-    }).then(balance => {
+    }).then(transactions => {
         res.json({
             success: true,
-            message: `Sub-account balance for ${req.query.account} with ${req.query.userId ? 'UserId' : ''} ${req.query.companyId ? 'CompanyId' : ''} ${req.query.userId ? req.query.userId : req.query.companyId}`,
-            data: balance
+            message: `Sub-account transactions for ${req.query.account} with ${req.query.userId ? 'UserId' : ''} ${req.query.companyId ? 'CompanyId' : ''} ${req.query.userId ? req.query.userId : req.query.companyId}`,
+            data: transactions
         })
     }).catch(err => {
         return next(err);
     });
 };
-
