# lib/handlers/getTransactions.js
@@ -26,7 +26,11 @@ exports.handler = function getTransactions(req, res, next) {
         return book.getTransactions({ account, perPage, page });
     }).then(txs => {
         const result = txs.map(t => t.values());
-        res.json(result);
+        res.json({
+            success: true,
+            message: `All transactions for ${req.query.account} returned `,
+            data: result
+        })
     }).catch(err => {
         return next(err);
     });
