# lib/handlers/postUserSignin.js
@@ -1,5 +1,5 @@
 /**
- * postUserSignin
+ * Sign in a user
  *
  * POST: /users/signin
  * 
