# lib/handlers/postUserSignup.js
@@ -1,5 +1,5 @@
 /**
- * postUserSignup
+ * Create a new user
  *
  * POST: /users/signup
  * 
@@ -9,16 +9,23 @@
  *   email {string} Email of user to be registered.
  *   userName {string} Username of user to be registered.
  *   password {string} Password of user to be registered.
+ *   joinDate {string} Join date of user to be registered.
+ *   memberId {string} MemberID of user to be registered.
+ *   nextSavingsDate {string} Next savings date of user to be registered.
+ *   nextSavingsAmount {string} Next savings amount of user to be registered.
+ *   position {string} Executive position of user to be registered.
+ *   phone {string} Phone number of user to be registered.
+ *   status {string} Status of user to be registered.
  *   
  */
 const User = require('../../models/user');
 const { generateHashPassword, generateToken } = require('../helpers/auth');
 
 exports.handler = function postUserSignup(req, res, next) {
-    const { firstName, lastName, email, userName, password } = req.body;
+    const { firstName, lastName, email, userName, password, joinDate, memberId, nextSavingsDate, nextSavingsAmount, position, phone, status, isGuarantor} = req.body;
     const hashPassword = generateHashPassword(password.trim());
 
-    User.getOrCreateUser(firstName, lastName, email, userName, hashPassword).then(result => {
+    User.getOrCreateUser(firstName, lastName, email, userName, hashPassword, joinDate, memberId, nextSavingsDate, nextSavingsAmount, position, phone, status, isGuarantor).then(result => {
         const cleanedResult = {
             isNew: result.isNew,
             user: {
@@ -26,7 +33,8 @@ exports.handler = function postUserSignup(req, res, next) {
                 firstName: result.user.firstName,
                 lastName: result.user.lastName,
                 userName: result.user.userName,
-                email: result.user.email
+                email: result.user.email,
+                memberId: result.user.memberId,
             }
         }
         return cleanedResult;
